###### TWE 4.5-1 RELEASED ######
2012-04-09 Sasa Bojanic <sasaboy@together.at>
   # signing JAR files with Together certificate

2012-02-23 Sasa Bojanic <sasaboy@together.at>
   # Compiled code can be executed only with Java7

###### TWE 4.4-1 RELEASED ######
2011-12-26 Sasa Bojanic <sasaboy@together.at>
  # Linux builds improved

2011-12-15 Sasa Bojanic <sasaboy@together.at>
  # jxpdl.jar updated
  # Shark mode: Reporting an error if Name fields of WorkflowProcess/Activity, Id fields of WorkflowProcess/Activity
    or ExceptionName field length is inappropriate
  # TSL licensed version now goes to distributions's twe folder
  # silent setup now also available for TSL licensed version
  # Allowing saving of XPDLs with validation warnings in "Released" XPDL Publication Status
  # WfXML: URL sample displayed
  # Icon and Title now appears in Help->Manual dialog

2011-12-07 Sasa Bojanic <sasaboy@together.at>
   # Updated configure.bat script not to have default values for VERSION/RELEASE and not to override 
     the values in version.properties file unless explicitely specified by configure script argument

2011-12-02 Sasa Bojanic <sasaboy@together.at>
   # Linux builds improvement
   # NSIS and exe installation improvement

2011-12-01 Sasa Bojanic <sasaboy@together.at>
   # Java7 compatibility:
      - refactored getType/setType methods of JaWEComponent interface to getComponentType/setComponentType
      - replaced propriatary SUN classes for JPEG handling (from com.sun.image.codec.jpeg package) with
        ImageIO API (SaveAsJPG.java)

2011-11-30 Sasa Bojanic <sasaboy@together.at>
   # Updated commons-io library to version 2.1
   # Updated itext5 to version 5.13
   # build procedure will now put the twe-patches and twe-restriction files to the proper places
     when such files should be generated for TXM

2011-10-26 Sasa Bojanic <sasaboy@together.at>
   # Copyright and Trademark sentences updated
   # No dependency targets and dependency output anymore
